; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_xen-scsiback.c_vaddr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_xen-scsiback.c_vaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vscsibk_pend = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.vscsibk_pend*, i32)* @vaddr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @vaddr(%struct.vscsibk_pend* %0, i32 %1) #0 {
  %3 = alloca %struct.vscsibk_pend*, align 8
  %4 = alloca i32, align 4
  store %struct.vscsibk_pend* %0, %struct.vscsibk_pend** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.vscsibk_pend*, %struct.vscsibk_pend** %3, align 8
  %6 = getelementptr inbounds %struct.vscsibk_pend, %struct.vscsibk_pend* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %7, i64 %9
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @vaddr_page(i32 %11)
  ret i64 %12
}

declare dso_local i64 @vaddr_page(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
